# framework.web.wearable.wrt-commons

./: CMakeLists.txt  uncrustify.sh  wrt-commons.manifest
etc/: wrt_commons_create_clean_db.sh  wrt_commons_reset_db.sh
examples/dbus/client-example/: CMakeLists.txt
examples/dbus/server-example/: CMakeLists.txt
modules/: CMakeLists.txt
modules/certificate_dao/: CMakeLists.txt
modules/certificate_dao/dao/: certificate_dao.cpp
modules/certificate_dao/include/wrt-commons/certificate-dao/: certificate_dao_types.h
modules/core/: config.cmake
modules/core/include/dpl/: application.h  bind.h  bool_operator.h  framework_appcore.h  once.h  optional.h  optional_typedefs.h  platform.h  scoped_array.h  scoped_gpointer.h  scoped_ptr.h  shared_ptr.h  task.h  thread.h
modules/core/src/: application.cpp  errno_string.cpp  mutable_task_list.cpp
modules/custom_handler_dao/: CMakeLists.txt
modules/custom_handler_dao/dao/: custom_handler_dao_read_only.cpp
modules/custom_handler_dao/include/wrt-commons/custom-handler-dao-ro/: common_dao_types.h  custom_handler_dao_read_only.h
modules/db/include/dpl/db/: sql_connection.h
modules/db/src/: sql_connection.cpp
modules/dbus/src/: connection.cpp  interface.cpp  server.cpp
modules/event/include/dpl/event/: event_support.h  generic_event_call.h  inter_context_delegate.h  property.h
modules/i18n/dao/: CMakeLists.txt
modules/localization/include/dpl/localization/: w3c_file_localization.h
modules/localization/src/: LanguageTagsProvider.cpp  w3c_file_localization.cpp
modules/log/src/: dlog_log_provider.cpp
modules/security_origin_dao/: CMakeLists.txt
modules/security_origin_dao/dao/: security_origin_dao_types.cpp
modules/security_origin_dao/include/wrt-commons/security-origin-dao/: security_origin_dao_types.h
modules/test/include/dpl/test/: test_results_collector.h  test_runner.h
modules/test/src/: test_results_collector.cpp  test_runner.cpp  test_runner_multiprocess.cpp
modules/utils/src/: mime_type_utils.cpp  path.cpp  widget_version.cpp
modules/widget_dao/: CMakeLists.txt
modules/widget_dao/dao/: common_dao_types.cpp  config_parser_data.cpp  feature_dao.cpp  property_dao.cpp  property_dao_read_only.cpp  widget_dao.cpp  widget_dao_read_only.cpp  widget_dao_types.cpp
modules/widget_dao/include/dpl/wrt-dao-ro/: common_dao_types.h  config_parser_data.h  global_config.h  widget_dao_read_only.h  widget_dao_types.h
modules/widget_dao/include/dpl/wrt-dao-rw/: widget_dao.h
modules/widget_dao/orm/: wrt_db
modules/widget_interface_dao/: CMakeLists.txt
modules/widget_interface_dao/dao/: widget_interface_dao.cpp
packaging/: wrt-commons.spec
tests/core/: CMakeLists.txt  test_bind.cpp  test_once.cpp  test_single_instance.cpp  test_waitable_handle_watch.cpp
tests/dao/: CMakeLists.txt  TestCases_CertificateDAO.cpp  TestCases_CustomHandlerDAO.cpp  TestCases_FeatureDAO.cpp  TestCases_PluginDAO.cpp  TestCases_SecurityOriginDAO.cpp  TestCases_WidgetDAO.cpp  TestCases_WidgetInterfaceDAO.cpp  wrt_dao_tests_prepare_db.sh
tests/db/: test_sql_connection.cpp
tests/dbus/: dbus_test.cpp  test_cases.cpp
tests/event/: test_event_support.cpp  test_ic_delegate.cpp  test_property.cpp
tests/files_localization/: test_suite01.cpp  wrt_db_localization_prepare.sh
tests/files_localization/files/: CMakeLists.txt
tests/unused/: test_shm.cpp
(+2 files in other folders)
